Fixed footer issue across index and portfolio sites. flex-grow: 1 was added to main, overflow:scroll was added to body for the portfolio site. For index-style, changed the min-height property in the main selector to height

--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -20,7 +20,7 @@ h1, h3 {
 */
 
 main {
-    min-height: 100%;
+    height: 100%;
 }
 
 main article {
